# pm-signals

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.sample.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.html  index.html
examples/: quickstart.py
src/pm_signals/: __init__.py  brief.py  cleanup.py  cli.py  config.py  models.py  pipeline.py  router.py  sentiment.py  triage.py  urgency.py
src/pm_signals/fetchers/: __init__.py  base.py  file_watcher.py  github.py  rss.py  sample.py
tests/: test_router.py  test_sentiment.py  test_triage.py  test_urgency.py
